--- a/include/footer.html
+++ b/include/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer ss-style-castle">
 	<div class="container">
 		<p>
-			&laquo;ФабЛаб&raquo; &copy;&nbsp;2012
+			&laquo;ФабЛаб&raquo; &copy;&nbsp;2012&nbsp;&mdash;&nbsp;2015
 			&nbsp;&nbsp;&nbsp;
 			<span>Информация данного Интернет-сайта защищена законом об авторских правах</span>
 			&nbsp;&nbsp;&nbsp;
