--- a/sass/_sticky-footer.sass
+++ b/sass/_sticky-footer.sass
@@ -1,10 +1,10 @@
 ﻿// flex box
-body
-	display: flex
-	min-height: 100vh
-	flex-direction: column
-	overflow-y: scroll
-	@media (min-width: 940px)
+html
+	@media (min-width: 768px)
 		overflow-x: hidden
-main
-	flex: 1
+		body
+			display: flex
+			min-height: 100vh
+			flex-direction: column
+			main
+				flex: 0 1 auto
