--- a/partial/main.html
+++ b/partial/main.html
@@ -1,8 +1,8 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 		<a href="http://vimeo.com/85431489"></a>
-		<a href="/img/slider/34.jpg"><img src="/img/slider/thumb/34.jpg"></a>
 		<a href="/img/slider/35.jpg"><img src="/img/slider/thumb/35.jpg"></a>
+		<a href="/img/slider/34.jpg"><img src="/img/slider/thumb/34.jpg"></a>
 		<a href="/img/slider/33.jpg"><img src="/img/slider/thumb/33.jpg"></a>
 		<a href="/img/slider/36.jpg"><img src="/img/slider/thumb/36.jpg"></a>
 		<a href="/img/slider/1.jpg"><img src="/img/slider/thumb/1.jpg"></a>
@@ -52,7 +52,7 @@
 					изготовление печатных плат и&nbsp;программирование
 					микроконтроллеров, создавая в&nbsp;итоге оригинальные функциональные
 					продукты. Курс вызвал огромный интерес как внутри университета,
-					так и&nbsp;далеко за&nbsp;его пределами, и&nbsp;очень быстро стало понятно, что
+					так и&nbsp;далеко за его пределами, и&nbsp;очень быстро стало понятно, что
 					подобный сплав современного доступного оборудования, открытого
 					программного обеспечения и&nbsp;демократичных методов преподавания
 					заслуживает стать чем-то значительно большим, чем просто часть
