--- a/partial/main.html
+++ b/partial/main.html
@@ -1,7 +1,7 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 		<a href="http://vimeo.com/85431489"></a>
-		<div data-img="http://vimeo.com/85431489">
+		<div data-img="/img/slider/35.jpg">
 			<div class="fb-page" data-href="https://www.facebook.com/fablab77" 
   data-width="280" data-hide-cover="false" data-show-facepile="false"
   data-show-posts="true"></div>
