--- a/partial/main.html
+++ b/partial/main.html
@@ -2,6 +2,7 @@
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 		<a href="http://vimeo.com/85431489"></a>
 		<a href="/img/slider/35.jpg"><img src="/img/slider/thumb/35.jpg"></a>
+		<a href="/img/slider/37.jpg"><img src="/img/slider/thumb/37.jpg"></a>
 		<a href="/img/slider/34.jpg"><img src="/img/slider/thumb/34.jpg"></a>
 		<a href="/img/slider/33.jpg"><img src="/img/slider/thumb/33.jpg"></a>
 		<a href="/img/slider/36.jpg"><img src="/img/slider/thumb/36.jpg"></a>
