--- a/partial/main.html
+++ b/partial/main.html
@@ -96,7 +96,7 @@
 				</p>
 			</section>
 			<div class="fb-page" data-href="https://www.facebook.com/fablab77" 
-			data-width="1140" data-heigth="800" data-hide-cover="false" data-show-facepile="false"
+			data-width="1140" data-height="800" data-hide-cover="false" data-show-facepile="false"
 			data-show-posts="true"></div>
 		</article>
 	</div>
