--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -65,6 +65,17 @@
 				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
 			</dd>
 		</dl>
+		<h3>Сычев Сергей Олегович</h3>
+		<dl class="dl-horizontal">
+			<dt>Роль:</dt>
+			<dd>помощник отца-основателя</dd>
+			<dt>E-mail:</dt>
+			<dd>
+				<a href="mailto:fablab@misis.ru">sychev@misis.ru</a>
+			</dd>
+			<dt>Телефон:</dt>
+			<dd>+7 (495) 638-45-47 </dd>
+		</dl>
 		<h3>Дмитрий Латкин</h3>
 		<dl class="dl-horizontal">
 			<dt>Роль:</dt>
