--- a/partial/main.html
+++ b/partial/main.html
@@ -3,6 +3,7 @@
 		<a href="http://vimeo.com/85431489"></a>
 		<a href="/img/slider/37.jpg"><img src="/img/slider/thumb/37.jpg"></a>
 		<a href="/img/slider/36.jpg"><img src="/img/slider/thumb/36.jpg"></a>
+		<a href="/img/slider/40.jpg"><img src="/img/slider/thumb/40.jpg"></a>
 		<a href="/img/slider/1.jpg"><img src="/img/slider/thumb/1.jpg"></a>
 		<a href="/img/slider/2.jpg"><img src="/img/slider/thumb/2.jpg"></a>
 		<a href="/img/slider/5.jpg"><img src="/img/slider/thumb/5.jpg"></a>
