--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -3,8 +3,8 @@
 		<address class="row">
 			<div class="col-sm-6">
 				<h2>Контакты</h2>
-				<h3>Мы находимся на территории МИСиС:</h3>
-				<p>г. Москва, м. Октябрьская, Крымский вал 3</p>
+				<h3>Мы находимся на территории Национального исследовательского технологического университета "МИСиС":</h3>
+				<p>г. Москва, м. Октябрьская, Крымский вал, д. 3</p>
 				<h3>Часы работы:</h3>
 				<p>Ср&nbsp;&mdash; Чт: 11:00&nbsp;&mdash; 18:00<br>
 				Телефон: <nobr>8 (495) 955-01-20</nobr></p>
