Полное изменение контактов

--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -58,58 +58,69 @@
 		<h2>Наши резиденты</h2>
 		<h3>Владимир Евгеньевич Кузнецов</h3>
 		<dl class="dl-horizontal">
-			<dt>Роль:</dt>
-			<dd>отец-основатель Фаблаба</dd>
-			<dt>Контакты:</dt>
+			<dt>Должность:</dt>
+			<dd>Директор учебно-производственного центра "ARTCAD"</dd>	
+			<dt>E-mail:</dt>
 			<dd>
 				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
 			</dd>
+			<dt>Телефон:</dt>
+			<dd>+7 (495) 955-01-20 </dd>
 		</dl>
 		<h3>Сычев Сергей Олегович</h3>
 		<dl class="dl-horizontal">
-			<dt>Роль:</dt>
-			<dd>помощник отца-основателя</dd>
+			<dt>Должность:</dt>
+			<dd>Заместитель директора</dd>
 			<dt>E-mail:</dt>
 			<dd>
 				<a href="mailto:fablab@misis.ru">sychev@misis.ru</a>
 			</dd>
 			<dt>Телефон:</dt>
-			<dd>+7 (495) 638-45-47 </dd>
+			<dd>+7 (495) 955-01-20 </dd>
 		</dl>
-		<h3>Дмитрий Латкин</h3>
+		<h3>Юдин Антон Владимирович</h3>
 		<dl class="dl-horizontal">
-			<dt>Роль:</dt>
-			<dd>повелитель Flexicam’а</dd>
+			<dt>Должность:</dt>
+			<dd>Ведущий инженер</dd>	
+			<dt>E-mail:</dt>
+			<dd>
+				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
+			</dd>
 		</dl>
-		<h3>Антон Юдин</h3>
+		<h3>Никулин Алексей Михайлович</h3>
 		<dl class="dl-horizontal">
-			<dt>Роль:</dt>
-			<dd>чёрный маг электроники</dd>
-			<dt>Опыт работы на станках:</dt>
-			<dd>все лазерные резаки, мини-фрезер Modela MDX-20, любые работы с электроникой</dd>
-			<dt>Контакты:</dt>
+			<dt>Должность:</dt>
+			<dd>Ведущий инженер</dd>	
+			<dt>E-mail:</dt>
 			<dd>
 				<a href="http://www.skycluster.ru">skycluster.ru</a>
 			</dd>
 		</dl>
-		<h3>Олег Уржумцев</h3>
+		<h3>Барменкова Ярослава Андреевна</h3>
 		<dl class="dl-horizontal">
-			<dt>Роль:</dt>
-			<dd>любитель</dd>
-			<dt>Опыт работы на станках:</dt>
-			<dd>Roland Modela MDX-20, Epilog cutter, Laserpro cutter, 3DTouch 3D printer, Replicator, любые работы с электроникой</dd>
-			<dt>Контакты:</dt>
+			<dt>Должность:</dt>
+			<dd>Инженер-дизайнер</dd>	
+			<dt>E-mail:</dt>
 			<dd>
-				<a href="http://www.about.me/netbug">http://about.me/netbug</a>
+				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
 			</dd>
 		</dl>
-		<h3>Дмитрий Cухоцкий</h3>
+		<h3>Михалин Михаил Викторович</h3>
 		<dl class="dl-horizontal">
-			<dt>Роль:</dt>
-			<dd>робототехник</dd>
-			<dt>Контакты:</dt>
+			<dt>Должность:</dt>
+			<dd>Инженер</dd>	
+			<dt>E-mail:</dt>
 			<dd>
-				<a href="http://www.dimrobotics.ru">dimrobotics.ru</a>
+				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
+			</dd>
+		</dl>
+		<h3>Егоров Филипп Владимирович</h3>
+		<dl class="dl-horizontal">
+			<dt>Должность:</dt>
+			<dd>Техник</dd>	
+			<dt>E-mail:</dt>
+			<dd>
+				<a href="mailto:fablab@misis.ru">fablab@misis.ru</a>
 			</dd>
 		</dl>
 	</div>
