Revert "пробую поправить"
This reverts commit 1d62c5308e816d6ac12fe6efa22568d8a5bed448.

--- a/partial/main.html
+++ b/partial/main.html
@@ -1,5 +1,6 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
+		<a href="/img/slider/66.jpg"><img src="/img/slider/thumb/66.jpg"></a>
 		<a href="http://fab.misis.ru"><img src="/img/slider/thumb/66.jpg"></a>
 		<a href="http://vimeo.com/85431489"></a>
 		<a href="/img/slider/37.jpg"><img src="/img/slider/thumb/37.jpg"></a>
