добалили ссылку на fabkids

--- a/partial/main.html
+++ b/partial/main.html
@@ -1,6 +1,6 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
-		<a href="/img/slider/30.jpg"><img src="/img/slider/thumb/30.jpg"></a>
+		<a href="https://fablab-event.timepad.ru/event/268353/"><img src="/img/slider/thumb/30.jpg"></a>
 		<a href="/img/slider/8.jpg"><img src="/img/slider/thumb/8.jpg"></a>
 		<a href="/img/slider/13.jpg"><img src="/img/slider/thumb/13.jpg"></a>	
 		<a href="/img/slider/15.jpg"><img src="/img/slider/thumb/15.jpg"></a>
