--- a/partial/main.html
+++ b/partial/main.html
@@ -1,4 +1,31 @@
 <div class="main">
+	
+	<article class="article">
+		<section class="top-article">
+				<h2>История появления Fablab</h2>
+				<img class="pull-left" src="/img/photo/neil.jpg">
+				<p>
+					В&nbsp;конце прошлого века в&nbsp;одном из&nbsp;ведущих технических
+					университетов мира&nbsp;&mdash; Массачусетском технологическом институте (MIT), профессор Нил Гершенфельд с&nbsp;коллегами начал читать курс, с не&nbsp;совсем академическим названием &laquo;Как сделать (почти) все, что угодно&raquo;. В&nbsp;рамках дисциплины студентов знакомили с&nbsp;современными цифровыми производственными машинами&nbsp;&mdash; с&nbsp;их&nbsp;возможностями и ограничениями. Студентов знакомили с&nbsp;современными технологиями
+					и&nbsp;предлагали реализовывать с&nbsp;их&nbsp;помощью собственные проекты.<br>
+					Всего за&nbsp;один семестр магистранты с&nbsp;самым различным образованием
+					и&nbsp;опытом успевали освоить несколько методов обработки материалов,
+					изготовление печатных плат и&nbsp;программирование
+					микроконтроллеров, создавая в&nbsp;итоге оригинальные функциональные
+					продукты. Курс вызвал огромный интерес как внутри университета,
+					так и&nbsp;далеко за его пределами, и&nbsp;очень быстро стало понятно, что
+					подобный сплав современного доступного оборудования, открытого
+					программного обеспечения и&nbsp;демократичных методов преподавания
+					заслуживает стать чем-то значительно большим, чем просто часть
+					академической программы одного, пусть даже и&nbsp;лучшего в&nbsp;мире,
+					технического университета. Таким образом, Центр битов и&nbsp;атомов,
+					возглавляемый Нилом Гершенфельдом, запустил программу развития
+					сети лабораторий цифрового производства Fab&nbsp;Lab, которая очень
+					скоро стала глобальным международным проектом.
+				</p>
+			</section>
+	</article>
+
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 		<a href="/img/slider/thumb/fabkids.jpg"><img src="/img/slider/thumb/fabkids.jpg"></a>
 		<a href="/img/slider/30.jpg"><img src="/img/slider/thumb/30.jpg"></a>
