--- a/partial/main.html
+++ b/partial/main.html
@@ -27,7 +27,7 @@
 	</article>
 
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
-		<a href="/img/slider/thumb/fabkids.jpg"><img src="/img/slider/thumb/fabkids.jpg"></a>
+		<a href="/img/slider/66.jpg"><img src="/img/slider/thumb/66.jpg"></a>
 		<a href="/img/slider/30.jpg"><img src="/img/slider/thumb/30.jpg"></a>
 		<a href="/img/slider/8.jpg"><img src="/img/slider/thumb/8.jpg"></a>
 		<a href="/img/slider/13.jpg"><img src="/img/slider/thumb/13.jpg"></a>	
