Добавили цвет к детям ссылки

--- a/include/header.html
+++ b/include/header.html
@@ -1,4 +1,13 @@
 <header class="header">
+	
+	<style>
+   #fabkids {
+    color: red; /* Цвет символа */
+   } 
+   </style>
+
+
+
 	<nav class="navbar navbar-default navbar-base" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -69,7 +78,7 @@
 					<li><a href="#/ctpo">ЦТПО</a></li>
 					<li><a href="#/events">События</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
-					<li><a href="https://fablab-event.timepad.ru/event/268353/">FABKids</a></li>
+					<li><a href="https://fablab-event.timepad.ru/event/268353/" id="fabkids">FABKids</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
