--- a/include/header.html
+++ b/include/header.html
@@ -1,10 +1,3 @@
-<style>
-   #fabkids {
-    color: red; /* Цвет символа */
-   } 
- </style>
-
-
 <header class="header">
 
 
@@ -78,7 +71,7 @@
 					<li><a href="#/ctpo">ЦТПО</a></li>
 					<li><a href="#/events">События</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
-					<li id="fabkids" ><a href="https://fablab-event.timepad.ru/event/268353/">FABKids</a></li>
+					<li><a href="https://fablab-event.timepad.ru/event/268353/"> <font color="red">FABKids</font></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
