Изменение ссылки "События" на Timepad

--- a/include/header.html
+++ b/include/header.html
@@ -69,7 +69,7 @@
 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
 					<!-- <li><a href="#/catalog">Каталог</a></li> -->
 					<li><a href="#/ctpo">ЦТПО</a></li>
-					<li><a href="#/events">События</a></li>
+					<li><a href="https://fablab-event.timepad.ru/events/">События</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="https://fablab-event.timepad.ru/event/268353/"> <font color="red"><strong>FABKids</strong></font></a></li>
 				</ul>
