--- a/include/header.html
+++ b/include/header.html
@@ -40,8 +40,8 @@
 							<li><a href="#/equipment/roland-modella-mdx-20">Настольный фрезерный станок Roland MDX20</a></li>
 							<li><a href="#/equipment/roland-modella-mdx-540">4-х осевой фрезерный станок Roland MDX 540</a></li>
 							<li class="divider"></li>
-							<li><a href="#/equipment/laser-epilog-mini">Устройсво лазерной резки/гравировки Epilog Mini24 40 Вт</a></li>
-							<li><a href="#/equipment/laser-pro-spirit">Устройсво лазерной резки/гравировки LaserPRO Spirit 100 Вт</a></li>
+							<li><a href="#/equipment/laser-epilog-mini">Устройство лазерной резки/гравировки Epilog Mini24 40 Вт</a></li>
+							<li><a href="#/equipment/laser-pro-spirit">Устройство лазерной резки/гравировки LaserPRO Spirit 100 Вт</a></li>
 							<li class="divider"></li>
 							<li><a href="#/equipment/roland-gx300-gx24">Рулонные режущие плоттеры Rolland GX300/GX24</a></li>
 							<li class="divider"></li>
