новое меню - ссылка

--- a/include/header.html
+++ b/include/header.html
@@ -22,6 +22,7 @@
 							<li><a href="#/fablab/wherefrom">Откуда</a></li>
 							<li><a href="#/fablab/charter">Хартия</a></li>
 							<li><a href="#/fablab/network">Всемирная сеть</a></li>
+							<li><a href="#/fablab/team">Команда</a></li>
 						</ul>
 					</li>
 					<li>
