--- a/include/header.html
+++ b/include/header.html
@@ -69,10 +69,11 @@
 					</li>
 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
 					<!-- <li><a href="#/catalog">Каталог</a></li> -->
-					<li><a href="#/ctpo">ЦТПО</a></li>
+					<li><a href="#/ctpo">ЦТПО</a></li>	
 					<li><a href="https://fablab-event.timepad.ru/events/">События</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
-					<li><a href="https://fablab-event.timepad.ru/event/268353/"> <font color="red"><strong>FABKids</strong></font></a></li>
+					<li><a href="https://fablab-event.timepad.ru/event/268353/"><font color="red"><strong>FABKids</strong></font></a></li>
+					<li><a href="https://makerfairemoscow.com"><font color="blue"><strong>makerFaireMoscow</strong></font></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
