--- a/include/header.html
+++ b/include/header.html
@@ -73,7 +73,7 @@
 					<li><a href="https://fablab-event.timepad.ru/events/">События</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
 					<li><a href="https://fablab-event.timepad.ru/event/268353/"><font color="red"><strong>FABKids</strong></font></a></li>
-					<li><a href="https://makerfairemoscow.com"><font color="blue"><strong>makerFaireMoscow</strong></font></a></li>
+					<li><a href="https://makerfairemoscow.com"><font color="blue"><strong>MakerFaireMoscow2016</strong></font></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
