--- a/include/footer.html
+++ b/include/footer.html
@@ -5,7 +5,7 @@
 			&nbsp;&nbsp;&nbsp;
 			<span>Информация данного Интернет-сайта защищена законом об авторских правах</span>
 			&nbsp;&nbsp;&nbsp;
-			<a href="/links">Медиа</a>
+			<a href="#/links">Медиа</a>
 		</p>
 	</div>
 </footer>
