--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -84,23 +84,44 @@ li.divider
 		float: none !important
 	.navbar-toggle
 		display: block !important
+	.navbar-nav>li
+		float: none !important
 @media (min-width: 1280px)
 	.navbar-toggle
 		display: none !important
 	.navbar-header
+		float: left !important
+	.navbar-nav>li
 		float: left !important
 
 
 .nav>li>a
 	padding: 15px 12px
 
+.header
+	@media (max-width: 1199px)
+		background: white
+.navbar-collapse
+	@media (max-width: 1199px)
+		background: white
+	@media (min-width: 768px) and (max-width: 1199px)
+		max-height: 340px
+		overflow-x: visible
+		padding-right: 15px
+		padding-left: 15px
+		border-top: 1px solid transparent
+		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1)
+		-webkit-overflow-scrolling: touch
 .navbar-collapse.collapse
-	display: none !important
+	// @media (min-width: 768px) and (max-width: 1199px)
+	// 	display: block !important
+	// 	&.in
+	// 		display: none !important
 	@media (min-width: 1200px)
-		display: block !important;
-		height: auto !important;
-		padding-bottom: 0;
-		overflow: visible !important;
+		display: block !important
+		height: auto !important
+		padding-bottom: 0
+		overflow: visible !important
 
 .navbar
 	background: rgba(255, 255, 255, 0.8)
