--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -105,18 +105,21 @@ li.divider
 	@media (max-width: 1199px)
 		background: white
 	@media (min-width: 768px) and (max-width: 1199px)
-		max-height: 340px
+		max-height: 340px !important
 		overflow-x: visible
 		padding-right: 15px
 		padding-left: 15px
 		border-top: 1px solid transparent
 		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1)
 		-webkit-overflow-scrolling: touch
+		&.in
+			display: block !important
 .navbar-collapse.collapse
-	// @media (min-width: 768px) and (max-width: 1199px)
-	// 	display: block !important
-	// 	&.in
-	// 		display: none !important
+	@media (min-width: 768px) and (max-width: 1199px)
+		display: none !important
+		&.in
+			display: block !important
+			overflow-y: scroll !important
 	@media (min-width: 1200px)
 		display: block !important
 		height: auto !important
