add events, fix navbar-toggle in mobile

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -79,6 +79,10 @@ li.divider
 	@media (min-width: 768px) and (max-width: 1199px)
 		float: none !important
 
+.navbar-toggle
+	margin: 0
+	padding: 17px 18px
+	border-radius: 0
 @media (min-width: 768px) and (max-width: 1199px)
 	.navbar-header
 		float: none !important
