--- a/include/header.html
+++ b/include/header.html
@@ -69,8 +69,8 @@
 					<li><a href="#/ctpo">ЦТПО</a></li>
 					<li><a href="#/events">События</a></li>
 					<li><a href="#/contacts">Контакты</a></li>
-					<li><a href="https://fablab-event.timepad.ru/event/268353/"><font color="red"><strong>FABKids</strong></font></a></li>
-					<li><a href="http://makerfairemoscow.com"><font color="blue"><strong>MakerFaireMoscow2016</strong></font></a></li>
+					<li><a href="https://fablab-event.timepad.ru/event/268353/"><strong class="red">FABKids</strong></a></li>
+					<li><a href="http://makerfairemoscow.com"><strong class="blue">MakerFaireMoscow2016</strong></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
