add links to socials

--- a/include/footer.html
+++ b/include/footer.html
@@ -66,9 +66,9 @@
 					<li><a href="#/creativity/large">По крупному</a></li>
 				</ul>
 				<ul class="places">
-					<li><a href="#"><img src="/img/socials/thingiverse.png"></a></li>
-					<li><a href="#"><img src="/img/socials/instructables.png"></a></li>
-					<li><a href="#"><img src="/img/socials/opendesk.png"></a></li>
+					<li><a href="https://www.thingiverse.com/tag:Fablab77" target="_blank"><img src="/img/socials/thingiverse.png"></a></li>
+					<li><a href="http://www.instructables.com/tag/type-id/keyword-fablab77/" target="_blank"><img src="/img/socials/instructables.png"></a></li>
+					<li><a href="https://www.opendesk.cc/open-making/makers/fablab77" target="_blank"><img src="/img/socials/opendesk.png"></a></li>
 				</ul>
 			</div>
 		</div>
