делаю меню События красным

--- a/include/header.html
+++ b/include/header.html
@@ -67,8 +67,8 @@
 					</li>
 					<li><a href="https://www.facebook.com/fablab77" target="_blank">Новости</a></li>
 					<li><a href="#/ctpo">ЦТПО</a></li>
-					<li><a href="#/events"<font color="red"><strong>События</strong></font></a></li>
 					<li><a href="#/contacts">Контакты</a></li>
+					<li><a href="#/events"><font color="red"><strong>События</strong></font></a></li>
 					<li><a href="http://makerfairemoscow.com"><font color="blue"><strong>MakerFaireMoscow2016</strong></font></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
