лого МИСиС заменила на новый

--- a/include/header.html
+++ b/include/header.html
@@ -73,7 +73,8 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right visible-lg">
 					<li><a href="http://web.mit.edu/" target="_blank"><img src="img/logos/mit.png" alt="MIT" height="18"></a></li>
-					<li><a href="http://www.misis.ru/" target="blank"><img src="img/logos/misis.png" alt="Moscow Institute of Steel and Alloys" height="50"></a></li>
+					<li><a href="http://www.misis.ru/" target="blank"><img src="https://makerfairemoscow.files.wordpress.com/2016/03/logo-sm-black-no-text1.png?w=181&h=70
+" alt="Moscow Institute of Steel and Alloys" height="50"></a></li>
 				</ul>
 			</div>
 		</div>
