--- a/include/footer.html
+++ b/include/footer.html
@@ -19,11 +19,12 @@
 				</ul>
 				<div class="info">
 					<ul class="socials">
-						<li><a href="http://vk.com/fablab77moscow" class="isvg"><ng-include src="'img/socials/vk.svg'"></ng-include></a></li>
-						<li><a href="https://www.facebook.com/fablab77" class="isvg"><ng-include src="'img/socials/fb.svg'"></ng-include></a></li>
-						<li><a href="https://twitter.com/MoscowMakerFair" class="isvg"><ng-include src="'img/socials/tw.svg'"></ng-include></a></li>
-						<li><a href="https://ru.pinterest.com/vladimirkuznets/" class="isvg"><ng-include src="'img/socials/pi.svg'"></ng-include></a></li>
-						<li><a href="https://www.flickr.com/photos/84316952@N05/" class="isvg"><ng-include src="'img/socials/fk.svg'"></ng-include></a></li>
+						<li><a href="http://vk.com/fablab77moscow" class="isvg" target="_blank"><ng-include src="'img/socials/vk.svg'"></ng-include></a></li>
+						<li><a href="https://www.facebook.com/fablab77" class="isvg" target="_blank"><ng-include src="'img/socials/fb.svg'"></ng-include></a></li>
+						<li><a href="https://twitter.com/MoscowMakerFair" class="isvg" target="_blank"><ng-include src="'img/socials/tw.svg'"></ng-include></a></li>
+						<li><a href="https://plus.google.com/u/0/communities/100165659236680707381" class="isvg" target="_blank"><ng-include src="'img/socials/gp.svg'"></ng-include></a></li>
+						<li><a href="https://ru.pinterest.com/vladimirkuznets/" class="isvg" target="_blank"><ng-include src="'img/socials/pi.svg'"></ng-include></a></li>
+						<li><a href="https://www.flickr.com/photos/84316952@N05/" class="isvg" target="_blank"><ng-include src="'img/socials/fk.svg'"></ng-include></a></li>
 					</ul>
 					<p class="copyright">
 						&laquo;ФабЛаб&raquo; &copy;&nbsp;2012&nbsp;&mdash;&nbsp;2016<br>
@@ -58,7 +59,7 @@
 			</div>
 			<div class="section creativity">
 				<h4>Технологии</h4>
-				<ul>
+				<ul class="list">
 					<li><a href="#/creativity/2d">2D</a></li>
 					<li><a href="#/creativity/3d">3D</a></li>
 					<li><a href="#/creativity/2d-3d">Из 2D в 3D</a></li>
@@ -70,6 +71,19 @@
 					<li><a href="http://www.instructables.com/tag/type-id/keyword-fablab77/" target="_blank"><img src="/img/socials/instructables.png"></a></li>
 					<li><a href="https://www.opendesk.cc/open-making/makers/fablab77" target="_blank"><img src="/img/socials/opendesk.png"></a></li>
 				</ul>
+				<!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
+				<div id="mc_embed_signup">
+					<form action="//fablab77.us13.list-manage.com/subscribe/post?u=7498937aa1cca5b6d39671987&amp;id=e87db99a1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">Подпишитесь на наши новости</label>
+							<input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email" required>
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7498937aa1cca5b6d39671987_e87db99a1b" tabindex="-1" value=""></div>
+								<div class="clear">
+									<input type="submit" value="Подписаться" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">
+								</div>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
