--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -233,10 +233,11 @@ hr
 			@media (max-width: 992px)
 				display: block
 				width: 100%
-			h4 a
-				color: black
-				text-decoration: underline
-
+			h4
+				text-transform: uppercase
+				a
+					color: black
+					text-decoration: underline
 			ul
 				list-style: none
 				margin-left: 0
@@ -302,6 +303,7 @@ hr
 				#mc-embedded-subscribe-form
 					label
 						font-size: 15px
+						text-transform: uppercase
 					.email
 						margin-bottom: 7px
 					.btn
