--- a/include/footer.html
+++ b/include/footer.html
@@ -71,11 +71,10 @@
 					<li><a href="http://www.instructables.com/tag/type-id/keyword-fablab77/" target="_blank"><img src="/img/socials/instructables.png"></a></li>
 					<li><a href="https://www.opendesk.cc/open-making/makers/fablab77" target="_blank"><img src="/img/socials/opendesk.png"></a></li>
 				</ul>
-				<!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
 				<div id="mc_embed_signup">
 					<form action="//fablab77.us13.list-manage.com/subscribe/post?u=7498937aa1cca5b6d39671987&amp;id=e87db99a1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
-							<label for="mce-EMAIL">Подпишитесь на наши новости</label>
+							<label for="mce-EMAIL">Подписка на новости fablab77</label>
 							<input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email" required>
 							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7498937aa1cca5b6d39671987_e87db99a1b" tabindex="-1" value=""></div>
 								<div class="clear">
