--- a/include/footer.html
+++ b/include/footer.html
@@ -19,9 +19,9 @@
 				</ul>
 				<div class="info">
 					<ul class="socials">
-						<li><a href="http://vk.com/fablab77moscow" class="isvg" target="_blank"><ng-include src="'img/socials/vk.svg'"></ng-include></a></li>
+						<li><a href="https://vk.com/fablabmoscow" class="isvg" target="_blank"><ng-include src="'img/socials/vk.svg'"></ng-include></a></li>
 						<li><a href="https://www.facebook.com/fablab77" class="isvg" target="_blank"><ng-include src="'img/socials/fb.svg'"></ng-include></a></li>
-						<li><a href="https://twitter.com/MoscowMakerFair" class="isvg" target="_blank"><ng-include src="'img/socials/tw.svg'"></ng-include></a></li>
+						<li><a href="https://twitter.com/hashtag/fablab77" class="isvg" target="_blank"><ng-include src="'img/socials/tw.svg'"></ng-include></a></li>
 						<li><a href="https://plus.google.com/u/0/communities/100165659236680707381" class="isvg" target="_blank"><ng-include src="'img/socials/gp.svg'"></ng-include></a></li>
 						<li><a href="https://ru.pinterest.com/vladimirkuznets/" class="isvg" target="_blank"><ng-include src="'img/socials/pi.svg'"></ng-include></a></li>
 						<li><a href="https://www.flickr.com/photos/84316952@N05/" class="isvg" target="_blank"><ng-include src="'img/socials/fk.svg'"></ng-include></a></li>
