амена ссылки на фотоальбом на licr

--- a/include/footer.html
+++ b/include/footer.html
@@ -23,7 +23,7 @@
 						<li><a href="https://www.facebook.com/fablab77" class="isvg"><ng-include src="'img/socials/fb.svg'"></ng-include></a></li>
 						<li><a href="https://twitter.com/MoscowMakerFair" class="isvg"><ng-include src="'img/socials/tw.svg'"></ng-include></a></li>
 						<li><a href="https://ru.pinterest.com/vladimirkuznets/" class="isvg"><ng-include src="'img/socials/pi.svg'"></ng-include></a></li>
-						<li><a href="https://www.flickr.com/photos/84316952@N05/" class="isvg"><ng-include src="'img/socials/fk.svg'"></ng-include></a></li>
+						<li><a href="https://www.flickr.com/photos/fablab77/" class="isvg"><ng-include src="'img/socials/fk.svg'"></ng-include></a></li>
 					</ul>
 					<p class="copyright">
 						&laquo;ФабЛаб&raquo; &copy;&nbsp;2012&nbsp;&mdash;&nbsp;2016<br>
