поправила адрес в подвале, кт ведет на ВК

--- a/include/footer.html
+++ b/include/footer.html
@@ -19,7 +19,7 @@
 				</ul>
 				<div class="info">
 					<ul class="socials">
-						<li><a href="http://vk.com/fablab77moscow" class="isvg"><ng-include src="'img/socials/vk.svg'"></ng-include></a></li>
+						<li><a href="http://vk.com/fablabmoscow" class="isvg"><ng-include src="'img/socials/vk.svg'"></ng-include></a></li>
 						<li><a href="https://www.facebook.com/fablab77" class="isvg"><ng-include src="'img/socials/fb.svg'"></ng-include></a></li>
 						<li><a href="https://twitter.com/MoscowMakerFair" class="isvg"><ng-include src="'img/socials/tw.svg'"></ng-include></a></li>
 						<li><a href="https://ru.pinterest.com/vladimirkuznets/" class="isvg"><ng-include src="'img/socials/pi.svg'"></ng-include></a></li>
