--- a/include/footer.html
+++ b/include/footer.html
@@ -58,7 +58,7 @@
 			</div>
 			<div class="section creativity">
 				<h4>Технологии</h4>
-				<ul>
+				<ul class="list">
 					<li><a href="#/creativity/2d">2D</a></li>
 					<li><a href="#/creativity/3d">3D</a></li>
 					<li><a href="#/creativity/2d-3d">Из 2D в 3D</a></li>
@@ -70,6 +70,20 @@
 					<li><a href="http://www.instructables.com/tag/type-id/keyword-fablab77/" target="_blank"><img src="/img/socials/instructables.png"></a></li>
 					<li><a href="https://www.opendesk.cc/open-making/makers/fablab77" target="_blank"><img src="/img/socials/opendesk.png"></a></li>
 				</ul>
+				<div id="mc_embed_signup">
+					<form action="//fablab77.us13.list-manage.com/subscribe/post?u=7498937aa1cca5b6d39671987&amp;id=e87db99a1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">Подписка на новости fablab77</label>
+							<input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email" required>
+							<div style="position: absolute; left: -5000px;" aria-hidden="true">
+								<input type="text" name="b_7498937aa1cca5b6d39671987_e87db99a1b" tabindex="-1" value="">
+							</div>
+							<div class="clear">
+								<input type="submit" value="Подписаться" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">
+							</div>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
