--- a/partial/main.html
+++ b/partial/main.html
@@ -1,8 +1,12 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
+		<div data-img="/img/slider/42.jpg" class="fotorama-container">
+			<div class="container">
+				<a href="http://bit.ly/1OwxGBy" class="btn btn-default btn-outline btn-lg slide-heading makers">Мы все мейкеры</a>
+			</div>
+		</div>
 		<a href="http://vimeo.com/85431489"></a>
 		<a href="/img/slider/41.jpg"><img src="/img/slider/thumb/41.jpg"></a>
-		<a href="/img/slider/42.jpg"><img src="/img/slider/thumb/42.jpg"></a>
 		<a href="/img/slider/30.jpg"><img src="/img/slider/thumb/30.jpg"></a>
 		<a href="/img/slider/37.jpg"><img src="/img/slider/thumb/37.jpg"></a>
 		<a href="/img/slider/36.jpg"><img src="/img/slider/thumb/36.jpg"></a>
