--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -314,6 +314,28 @@ hr
 	position: relative
 	top: -81px
 	margin-bottom: -40px
+	.fotorama-container
+		height: 100%
+	.container
+		height: 100%
+		position: relative
+	.slide-heading
+		position: absolute
+		bottom: 30px
+		right: 30px
+		&.btn.btn-outline
+			border-radius: 0
+			background: none
+			border: 1px solid white
+			color: white
+			padding: 16px 32px
+			font-size: 20px
+			font-weight: 500
+			&:hover
+				color: #000
+				background: #fff
+			&.makers:hover
+				color: #9B8355
 // index
 .main, .main-page, .main-page-2
 	.header
