--- a/partial/main.html
+++ b/partial/main.html
@@ -6,26 +6,26 @@
 			</div>
 		</div>
 		<a href="http://vimeo.com/85431489"></a>
-		<a href="/img/slider/41.jpg"><img src="/img/slider/thumb/41.jpg"></a>
-		<a href="/img/slider/30.jpg"><img src="/img/slider/thumb/30.jpg"></a>
-		<a href="/img/slider/37.jpg"><img src="/img/slider/thumb/37.jpg"></a>
-		<a href="/img/slider/36.jpg"><img src="/img/slider/thumb/36.jpg"></a>
-		<a href="/img/slider/40.jpg"><img src="/img/slider/thumb/40.jpg"></a>
-		<a href="/img/slider/1.jpg"><img src="/img/slider/thumb/1.jpg"></a>
-		<a href="/img/slider/5.jpg"><img src="/img/slider/thumb/5.jpg"></a>
-		<a href="/img/slider/8.jpg"><img src="/img/slider/thumb/8.jpg"></a>
-		<a href="/img/slider/13.jpg"><img src="/img/slider/thumb/13.jpg"></a>
-		<a href="/img/slider/15.jpg"><img src="/img/slider/thumb/15.jpg"></a>
-		<a href="/img/slider/18.jpg"><img src="/img/slider/thumb/18.jpg"></a>
-		<a href="/img/slider/20.jpg"><img src="/img/slider/thumb/20.jpg"></a>
-		<a href="/img/slider/22.jpg"><img src="/img/slider/thumb/22.jpg"></a>
-		<a href="/img/slider/24.jpg"><img src="/img/slider/thumb/24.jpg"></a>
-		<a href="/img/slider/27.jpg"><img src="/img/slider/thumb/27.jpg"></a>
-		<a href="/img/slider/29.jpg"><img src="/img/slider/thumb/29.jpg"></a>
-		<a href="/img/slider/31.jpg"><img src="/img/slider/thumb/31.jpg"></a>
-		<a href="/img/slider/35.jpg"><img src="/img/slider/thumb/35.jpg"></a>
-		<a href="/img/slider/33.jpg"><img src="/img/slider/thumb/33.jpg"></a>
-		<a href="/img/slider/33.png"><img src="/img/slider/thumb/33.png"></a>
+		<div data-img="/img/slider/41.jpg" data-thumb="/img/slider/thumb/41.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/30.jpg" data-thumb="/img/slider/thumb/30.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/37.jpg" data-thumb="/img/slider/thumb/37.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/36.jpg" data-thumb="/img/slider/thumb/36.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/40.jpg" data-thumb="/img/slider/thumb/40.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/1.jpg" data-thumb="/img/slider/thumb/1.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/5.jpg" data-thumb="/img/slider/thumb/5.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/8.jpg" data-thumb="/img/slider/thumb/8.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/13.jpg" data-thumb="/img/slider/thumb/13.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/15.jpg" data-thumb="/img/slider/thumb/15.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/18.jpg" data-thumb="/img/slider/thumb/18.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/20.jpg" data-thumb="/img/slider/thumb/20.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/22.jpg" data-thumb="/img/slider/thumb/22.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/24.jpg" data-thumb="/img/slider/thumb/24.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/27.jpg" data-thumb="/img/slider/thumb/27.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/29.jpg" data-thumb="/img/slider/thumb/29.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/31.jpg" data-thumb="/img/slider/thumb/31.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/35.jpg" data-thumb="/img/slider/thumb/35.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/33.jpg" data-thumb="/img/slider/thumb/33.jpg"><div class="hide"></div></div>
+		<div data-img="/img/slider/33.png" data-thumb="/img/slider/thumb/33.png"><div class="hide"></div></div>
 	</section>
 
 	<div class="container">
