сделал побольше кнопку и уменьшил размер на телефонах

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -331,9 +331,12 @@ hr
 			padding: 16px 32px
 			font-size: 20px
 			font-weight: 500
+			max-width: calc(100% - 125px)
+			@media (min-width: 993px)
+				font-size: 30px
 			&:hover
 				color: #000
-				background: #fff
+				background: rgba(255,255,255,0.8)
 			&.makers:hover
 				color: #9B8355
 // index
