--- a/partial/main.html
+++ b/partial/main.html
@@ -2,7 +2,7 @@
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
 		<div data-img="/img/slider/42.jpg" class="fotorama-container">
 			<div class="container">
-				<a href="http://bit.ly/1OwxGBy" class="btn btn-default btn-outline btn-lg slide-heading makers">Maker Faire впервые в России! Участие</a>
+				<a href="http://bit.ly/1OwxGBy" class="btn btn-default btn-outline btn-lg slide-heading makers">Maker Faire впервые в России! Стань его участником!</a>
 			</div>
 		</div>
 		<a href="http://vimeo.com/85431489"></a>
