--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -51,7 +51,10 @@
 		</p>
 		<p>
 			Как попасть в ФАБЛАБ? Пишите на <a href="mailto:fablab@misis.ru">fablab@misis.ru</a>.
-			ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (СМОТРИТЕ НОВОСТОИ И РЕГИСТРАЦИИ НА САЙТЕ >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.
+		</p>
+		<p>
+			ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ
+			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (новости и регистрация тутЫ >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.
 		</p>
 	</div>
 
