--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -54,7 +54,7 @@
 		</p>
 		<p>
 			!!!! ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ
-			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (новости и регистрация на сайте фестиваляЫ >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.
+			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.
 		</p>
 	</div>
 
