--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -53,8 +53,8 @@
 			Как попасть в ФАБЛАБ? Пишите на <a href="mailto:fablab@misis.ru">fablab@misis.ru</a>.
 		</p>
 		<p>
-			!!!! ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ
-			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.
+			<h2> !!!! ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ
+			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.</h2>
 		</p>
 	</div>
 
