--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -54,7 +54,7 @@
 		</p>
 		<p>
 			<h3> !!!! ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ
-			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ (новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.</h3>
+			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ. Новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.</h3>
 		</p>
 	</div>
 
