--- a/partial/contacts.html
+++ b/partial/contacts.html
@@ -53,8 +53,8 @@
 			Как попасть в ФАБЛАБ? Пишите на <a href="mailto:fablab@misis.ru">fablab@misis.ru</a>.
 		</p>
 		<p>
-			<h3> !!!! ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ - МЫ ГОТОВИМСЯ К ПРОВЕДЕНИЮ ПЕРВОГО МЕЙКЕРСКОГО ФЕСТИВАЛЯ MOSCOW MINI MAKER FAIRE, КУДА ВАС ЗОВЕМ
-			 И ПОСЕТИТЕЛЯМИ И ВОЛОНТЕРАМИ. Новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.</h3>
+			<h3> !!!! ВНИМАНИЕ! ДО 12 ИЮЛЯ ФАБЛАБ ЗАКРЫТ </h3>
+			-Мы готовимся к проведению первого мейкерского фестиваля Moscow Mini Maker Faire, куда вас зовем и посетителями и волонтерами. Новости и регистрация на сайте фестиваля >> <a href="https://makerfairemoscow.com/"> makerfairemoscow.com</a>.
 		</p>
 	</div>
 
