--- a/partial/main.html
+++ b/partial/main.html
@@ -1,5 +1,6 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
+		<a href="https://www.youtube.com/embed/j6yUQalO23k"></a>
 		<div data-img="/img/slider/42.jpg" class="fotorama-container">
 			<div class="container">
 				<a href="http://bit.ly/1OwxGBy" class="btn btn-default btn-outline btn-lg slide-heading makers hidden-xs">Maker Faire впервые в России! Стань его участником!</a>
