--- a/partial/main.html
+++ b/partial/main.html
@@ -1,5 +1,10 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
+		<div data-img="/img/magistracy/2016.jpg" class="fotorama-container">
+			<div class="container">
+				<a href="https://fablab-event.timepad.ru/event/352279/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить!</a>
+			</div>
+		</div>
 		<a href="https://www.youtube.com/embed/j6yUQalO23k" data-img="/img/slider/MiniMakerFaire.jpg">
 			<img src="/img/slider/MiniMakerFaire.jpg">
 		</a>
