--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -41,6 +41,14 @@ li.divider
 	white-space: nowrap
 
 .btn
+	&.magistracy
+		color: #FEED00 !important
+		background: #302F2E !important
+		border: 3px solid #302F2E !important
+		&:hover
+			border: 3px dashed #FEED00 !important
+			// color: #302F2E !important
+			// background: #FEED00 !important
 	@media (max-width: 480px)
 		font-size: 14px
 		width: 100%
