--- a/partial/main.html
+++ b/partial/main.html
@@ -1,10 +1,15 @@
 <div class="main">
 	<section fotorama class="fotorama" data-width="100%" data-height="100%" data-loop="true" data-fit="cover" data-nav="thumbs" data-thumbwidth="100">
+	<!--
 		<div data-img="/img/magistracy/2016.jpg" class="fotorama-container">
 			<div class="container">
 				<a href="https://fablab-event.timepad.ru/event/352279/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить!</a>
 			</div>
 		</div>
+	-->
+		<a href="https://www.youtube.com/embed/d7izKx7Cr6M" data-img="/img/slider/MiniMakerFaire.jpg">
+			<img src="/img/slider/MakerFaire.jpg">
+		</a>
 		<a href="https://www.youtube.com/embed/j6yUQalO23k" data-img="/img/slider/MiniMakerFaire.jpg">
 			<img src="/img/slider/MiniMakerFaire.jpg">
 		</a>
@@ -89,11 +94,11 @@
 					</b>
 				</p>
 				<p class="text-right text-muted">
-					Команда лаборатории цифрового<br> 
+					Команда лаборатории цифрового<br>
 					производства &laquo;ФАБЛАБ&raquo; НИТУ &laquo;МИСиС&raquo;
 				</p>
 			</section>
-			<div class="fb-page" data-href="https://www.facebook.com/fablab77" 
+			<div class="fb-page" data-href="https://www.facebook.com/fablab77"
 			data-width="1140" data-height="800" data-hide-cover="false" data-show-facepile="false"
 			data-show-posts="true"></div>
 		</article>
