--- a/partial/main.html
+++ b/partial/main.html
@@ -7,7 +7,7 @@
 			</div>
 		</div>
 	-->
-		<a href="https://www.youtube.com/embed/d7izKx7Cr6M" data-img="/img/slider/MiniMakerFaire.jpg">
+		<a href="https://www.youtube.com/embed/d7izKx7Cr6M" data-img="/img/slider/MakerFaire.jpg">
 			<img src="/img/slider/MakerFaire.jpg">
 		</a>
 		<a href="https://www.youtube.com/embed/j6yUQalO23k" data-img="/img/slider/MiniMakerFaire.jpg">
