--- a/partial/main.html
+++ b/partial/main.html
@@ -40,6 +40,7 @@
 		<div data-img="/img/slider/35.jpg" data-thumb="/img/slider/thumb/35.jpg"><div class="hide"></div></div>
 		<div data-img="/img/slider/33.jpg" data-thumb="/img/slider/thumb/33.jpg"><div class="hide"></div></div>
 		<div data-img="/img/slider/33.png" data-thumb="/img/slider/thumb/33.png"><div class="hide"></div></div>
+		<div data-img="/img/slider/tree.jpg" data-thumb="/img/slider/thumb/tree.jpg"><div class="hide"></div></div>
 	</section>
 
 	<div class="container">
