--- a/partial/main.html
+++ b/partial/main.html
@@ -6,8 +6,15 @@
 				<a href="https://fablab-event.timepad.ru/event/352279/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Поступить!</a>
 			</div>
 		</div>
-	-->
 		<div data-img="/img/slider/tree.png" data-thumb="/img/slider/thumb/tree.jpg"><div class="hide"></div></div>
+	-->
+
+		<div data-img="/img/slider/tree.png" class="fotorama-container">
+			<div class="container">
+				<a href="https://fablab-event.timepad.ru/event/389080/" class="btn btn-outline btn-lg slide-heading btn-success magistracy">Зарегистрироваться!</a>
+			</div>
+		</div>
+
 		<a href="https://www.youtube.com/embed/d7izKx7Cr6M" data-img="/img/slider/MakerFaire.jpg">
 			<img src="/img/slider/MakerFaire.jpg">
 		</a>
