--- a/partial/main.html
+++ b/partial/main.html
@@ -10,7 +10,7 @@
 		<div data-img="/img/slider/31.jpg" data-thumb="/img/slider/thumb/31.jpg"><div class="hide"></div></div>
 		<div data-img="/img/slider/35.jpg" data-thumb="/img/slider/thumb/35.jpg"><div class="hide"></div></div>
 	</section>
-
+	<!-- test comment -->
 	<div class="container">
 		<article class="article">
 			<section class="top-article">
