Try to add FB link

--- a/include/header.html
+++ b/include/header.html
@@ -3,6 +3,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="#/"><img src="img/logos/fablab.png" alt="Фаблаб Москва"></a>
+				<a href="https://www.facebook.com/fablab77"><img src="img/logos/fablab_fb.png" alt="Фаблаб Москва"></a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
 					<div class="navbar-header-button-icon">
 						<span class="icon-bar"></span>
