--- a/include/header.html
+++ b/include/header.html
@@ -2,8 +2,10 @@
 	<nav class="navbar navbar-default navbar-base" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
+				<a href="https://www.facebook.com/fablab77"><img src="img/logos/fablab_fb.png" alt="Файсбук"></a>
+				<a href="https://vk.com/fablabmoscow"><img src="img/logos/fablab_vk.png" alt="Вконтакте"></a>
+				<a href="https://www.instagram.com/fablabmoscow/"><img src="img/logos/fablab_inst.png" alt="Инстаграмм"></a>
 				<a href="#/"><img src="img/logos/fablab.png" alt="Фаблаб Москва"></a>
-				<a href="https://www.facebook.com/fablab77"><img src="img/logos/fablab_fb.png" alt="Фаблаб Москва"></a>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
 					<div class="navbar-header-button-icon">
 						<span class="icon-bar"></span>
