--- a/include/footer.html
+++ b/include/footer.html
@@ -26,7 +26,7 @@
 						<li><a href="https://www.flickr.com/photos/fablab77/" class="isvg"><ng-include src="'img/socials/fk.svg'"></ng-include></a></li>
 					</ul>
 					<p class="copyright">
-						&laquo;ФабЛаб&raquo; &copy;&nbsp;2012&nbsp;&mdash;&nbsp;2016<br>
+						&laquo;ФабЛаб&raquo; &copy;&nbsp;2012&nbsp;&mdash;&nbsp;2017<br>
 						<span>Информация данного Интернет-сайта защищена законом об авторских правах</span>
 					</p>
 				</div>
@@ -71,6 +71,12 @@
 					<li><a href="https://www.opendesk.cc/open-making/makers/fablab77" target="_blank"><img src="/img/socials/opendesk.png"></a></li>
 				</ul>
 				<div id="mc_embed_signup">
+
+<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="//timepad.ru/js/tpwf/loader.min.js" data-timepad-widget="org_subscribe">
+	(function(){return {"orgtag":"fablab-event","orgid":"53589"}; })();
+</script>
+
+			<!--	
 					<form action="//fablab77.us13.list-manage.com/subscribe/post?u=7498937aa1cca5b6d39671987&amp;id=e87db99a1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
 							<label for="mce-EMAIL">Подписка на новости fablab77</label>
@@ -83,6 +89,7 @@
 							</div>
 						</div>
 					</form>
+			-->
 				</div>
 			</div>
 		</div>
